tests/ui/unboxed-closures/unboxed-closures-infer-fn-once-move-from-projection.stderr
error[E0277]: expected a `Fn()` closure, found `{closure@$DIR/unboxed-closures-infer-fn-once-move-from-projection.rs:14:13: 14:15}`
  --> $DIR/unboxed-closures-infer-fn-once-move-from-projection.rs:15:9
   |
LL |     foo(c);
   |     --- ^ expected an `Fn()` closure, found `{closure@$DIR/unboxed-closures-infer-fn-once-move-from-projection.rs:14:13: 14:15}`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Fn<()>` is not implemented for closure `{closure@$DIR/unboxed-closures-infer-fn-once-move-from-projection.rs:14:13: 14:15}`
   = note: wrap the `{closure@$DIR/unboxed-closures-infer-fn-once-move-from-projection.rs:14:13: 14:15}` in a closure with no arguments: `|| { /* code */ }`
   = note: `{closure@$DIR/unboxed-closures-infer-fn-once-move-from-projection.rs:14:13: 14:15}` implements `FnOnce`, but it must implement `Fn`, which is more general
note: required by a bound in `foo`
  --> $DIR/unboxed-closures-infer-fn-once-move-from-projection.rs:4:14
   |
LL | fn foo<F>(f: F)
   |    --- required by a bound in this function
LL |     where F: Fn()
   |              ^^^^ required by this bound in `foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
